tests/compile_fail/on_a_function_with_default_return_type.rs
use michie::memoized;

#[memoized]
fn f() {}

fn main() {}
